# Masters-Research-Project-Middleware-Based-Sensor-Data-Abstraction-in-SDVs

./: LICENSE  README.md
.git_old/: COMMIT_EDITMSG  index
.git_old/logs/: HEAD
.git_old/logs/refs/heads/: main
.git_old/refs/heads/: main
Laptop/: README.md  detect_from_kuksa.py  laptop_sync.py  publisher.py  send_image_to_kuksa.py  start_laptop_pipeline.sh  subscriber.py
RPi/: README.md  detect_from_kuksa.py  run_rpi_pipeline.sh
RPi/dds_rpi_publisher/: CMakeLists.txt  dds_rpi_publisher  main.cpp
RPi/dds_rpi_subscriber/: RawImageMsg.hpp  RawImageMsg.idl  dds_rpi_subscriber  dds_rpi_subscriber.cpp  send_to_kuksa.py
RPi/vss/: vss_release_4.0.json
RPi/vss_sync/: rpi_sync.py
